--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "@mui/x-date-pickers": "^7.1.1",
+    "@mui/x-date-pickers": "^7.2.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "material-react-table": "^2.12.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
